--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "jest": "^23.6.0",
+    "mockdate": "^2.0.2",
     "regenerator-runtime": "^0.13.1",
     "rollup": "^0.67.4",
     "rollup-plugin-babel": "^4.1.0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-uglify": "^6.0.0"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./__mocks__/setupTests.js"
   }
 }
