--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c",
+    "lint": "eslint src/**/*.js",
     "test": "jest"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "repository": "git@github.com:gauseen/tools.git",
   "author": "gauseen <gauseen@163.com>",
@@ -26,6 +32,13 @@
     "@babel/preset-env": "^7.2.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "eslint": "^5.10.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.2.1",
     "jest": "^23.6.0",
     "mockdate": "^2.0.2",
     "regenerator-runtime": "^0.13.1",
